@@ -6,6 +6,11 @@ then you win. –- Mahatma Gandhi
 
 Wed, Jan 7, 2010
 ---------------------------------------------------------------------
+- Added Spanish translation (thanks, Beatriz!)
+- Fixed text encoding issues with Ruby 1.9/MySQL and HAML (thanks, Gavin!)
+
+Wed, Jan 7, 2010
+---------------------------------------------------------------------
 - Added :per_user_locale setting (default is false).
 - Added some CSS eye candy (drop shadows and options links).
 - Version 0.9.9b
